# metamod-vconsole

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build-docker.sh  build.sh  config.ini  package.sh  vcpkg.json
cmake/: CompilerRuntime.cmake  VcpkgIntegration.cmake
src/: config.cpp  config.hpp  dllapi.cpp  engine_api.cpp  h_export.cpp  meta_api.cpp  vconsole_server.cpp  vconsole_server.hpp
tests/: Makefile  run_test.sh  vconsole_test  vconsole_test.cpp
vcpkg_ports/metamod/: portfile.cmake
